# DL-Coccidiosis_Disease_Detection

./: README.md  app.py  dvc.yaml  main.py  pyproject.toml  requirements.txt  requirements_updated.txt  scores.json  setup.py  template.py
.github/workflows/: main.yaml
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_prepare_callbacks.ipynb  04_training.ipynb  05_model_evaluation.ipynb  trials.ipynb
src/CoccidiosisDetector/components/: data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callbacks.py  training.py
src/CoccidiosisDetector/config/: configuration.py
src/CoccidiosisDetector/constants/: __init__.py
src/CoccidiosisDetector/exception/: __init__.py
src/CoccidiosisDetector/logger/: __init__.py
src/CoccidiosisDetector/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
src/CoccidiosisDetector/utils/: utils.py
templates/: index.html
